fixed video on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -49,13 +49,30 @@ video {
     display: none;
 }
 
+#play-button {
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    position:fixed;
+    z-index: 30;
+    text-align: center;
+    padding-top: 300px;
+}
+
+#play-image {
+    margin-left: 400px;
+    width: 300px;
+    height: 300px;
+    background-image: url(../images/play_button.png);
+}
 
 #loading-graphic {
     width: 100%;
     height: 100%;
     background-color: #000;
     position:fixed;
-    z-index: 20;
+    z-index: 25;
 }
 
 #loading-graphic div {
@@ -119,6 +136,10 @@ video {
 #please-rotate {
     cursor: pointer;
     display: none;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: 40;
 }
 
 #rotate-image {
@@ -149,6 +170,32 @@ video {
     -ms-animation: rotateFrames ease 2s;
     -ms-animation-iteration-count: infinite;
     -ms-transform-origin: 50% 50%;
+}
+
+#rotate-message {
+    background-color: #000;
+    font-size: 20pt;
+    text-align: center;
+    font-family: Verdana, Geneva, sans-serif;
+    color: #fff;
+    padding-top: 700px;
+    z-index:500;
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    /* position: absolute; */
+    /* z-index: 40; */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+#rotate-message small {
+    font-size: 16pt;
+    color: #ffcc00;
+
 }
 
 @keyframes rotateFrames{
@@ -211,28 +258,4 @@ video {
   }
 }
 
-#rotate-message {
-    font-size: 20pt;
-    text-align: center;
-    font-family: Verdana, Geneva, sans-serif;
-    color: #fff;
-    padding-top: 700px;
-    z-index:500;
-    position: absolute;
-    width: 400px;
-    height: 400px;
-    /* position: absolute; */
-    /* z-index: 40; */
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-#rotate-message small {
-    font-size: 16pt;
-    color: #ffcc00;
-
-}
 
